# Squelch

./: .gitignore  Cargo.toml  Justfile  README.md  TESTING.md  cliff.toml
.github/workflows/: release.yml
docs/: mvp.md  workspace.md
docs/adr/: adr-0000-template.md  adr-0001-cargo-workspace.md  adr-0002-egui.md  adr-0002-tauri-v2.md  adr-0003-matrix-signaling.md  adr-0004-license.md  adr-0005-communication-model.md  adr-0006-room-lifecycle.md  adr-0007-squad-open-mic.md  adr-0008-lobby-first-ux.md
spikes/001-str0m-webrtc/: Cargo.toml  README.md
spikes/001-str0m-webrtc/src/: main.rs
spikes/002-matrix-signaling/: Cargo.toml  README.md
spikes/002-matrix-signaling/src/: main.rs
spikes/003-audio-mixing/: Cargo.toml  README.md
spikes/003-audio-mixing/src/: main.rs
squelch-app/: Cargo.toml
squelch-app/src/: app.rs  backend.rs  config.rs  hotkey.rs  main.rs
squelch-audio/: Cargo.toml
squelch-audio/src/: error.rs  lib.rs  pipeline.rs  ptt.rs
squelch-core/: Cargo.toml
squelch-core/src/: error.rs  lib.rs  squad.rs
squelch-matrix/: Cargo.toml
squelch-matrix/src/: client.rs  error.rs  event_types.rs  lib.rs  signaling.rs
squelch-webrtc/: Cargo.toml
squelch-webrtc/src/: error.rs  lib.rs  mesh.rs  peer.rs
