[workspace]
members = [
  "squelch-app",
  "squelch-audio",
  "squelch-core",
  "squelch-matrix",
  "squelch-webrtc",
]
resolver = "3"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Audio
cpal = "0.15"
ringbuf = "0.3"

# WebRTC
str0m = "0.20"

# Matrix
matrix-sdk = { version = "0.18", default-features = false, features = ["experimental-send-custom-to-device", "sqlite"] }
matrix-sdk-common = "0.18"
ruma = { version = "0.16", features = ["client-api-c"] }

# UI
eframe = "0.31"
egui = "0.31"
