[package]
name = "squelch-app"
version = "0.1.0"
edition = "2024"
publish = false
description = "Squelch desktop app — egui UI, tray icon, and global PTT hotkey."

[[bin]]
name = "squelch"
path = "src/main.rs"

[dependencies]
squelch-core   = { path = "../squelch-core" }
squelch-matrix = { path = "../squelch-matrix" }
squelch-webrtc = { path = "../squelch-webrtc" }
squelch-audio  = { path = "../squelch-audio" }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
eframe             = { workspace = true }
egui               = { workspace = true }
global-hotkey      = { workspace = true }
tray-icon          = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
matrix-sdk         = { workspace = true }
dirs               = "5"
toml               = "0.8"
