[package]
name = "squelch-audio"
version = "0.1.0-alpha"
edition = "2024"
publish = false
description = "Microphone capture, mixing, and playback for Squelch, powered by cpal."

[dependencies]
squelch-core = { path = "../squelch-core" }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
cpal         = { workspace = true }
ringbuf      = { workspace = true }
opus         = { workspace = true }
tokio        = { workspace = true }
