[package]
name = "squelch-matrix"
version = "0.1.0"
edition = "2024"
publish = false
description = "Matrix signaling backend for Squelch — room management and WebRTC SDP/ICE exchange."

[dependencies]
squelch-core = { path = "../squelch-core" }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
matrix-sdk        = { workspace = true }
matrix-sdk-common = { workspace = true }
ruma              = { workspace = true }
