[package]
name = "spike-matrix-signaling"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spike-matrix-signaling"
path = "src/main.rs"

[dependencies]
matrix-sdk = { version = "0.18", default-features = false, features = ["experimental-send-custom-to-device", "sqlite"] }
matrix-sdk-common = "0.18"
ruma = { version = "0.16", features = ["client-api-c"] }
tracing = "0.1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tracing-subscriber = "0.3"
